canary-deployment/blue/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-blue-svc
  labels:
    app: hello-app
    version: blue
spec:
  selector:
    app: hello-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
