canary-deployment/blue/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/techcon
        pathType: Prefix
        backend:
          service:
            name: hello-blue-svc
            port:
              number: 80
